force-app/main/default/objects/HealthRecord__c/fields/BP_Down__c.field-meta.xml
<CustomField>
    <fullName>BP_Down__c</fullName>
    <label>BP Down</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>