force-app/main/default/objects/HealthRecord__c/fields/BP_Up__c.field-meta.xml
<CustomField>
    <fullName>BP_Up__c</fullName>
    <label>BP Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>