force-app/main/default/objects/HealthRecord__c/fields/Evening_BP_Reading_Up__c.field-meta.xml
<CustomField>
    <fullName>Evening_BP_Reading_Up__c</fullName>
    <formula>IF(Phase__c == &quot;Evening&quot;,  BP_Up__c  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evening BP Reading Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>