force-app/main/default/objects/HealthRecord__c/fields/Evening_Medicine__c.field-meta.xml
<CustomField>
    <fullName>Evening_Medicine__c</fullName>
    <formula>IF(Phase__c == &quot;Evening&quot;, Medicine__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evening Medicine</label>
    <type>Text</type>
</CustomField>