force-app/main/default/objects/HealthRecord__c/fields/Evening_Time__c.field-meta.xml
<CustomField>
    <fullName>Evening_Time__c</fullName>
    <formula>IF(Phase__c == &quot;Evening&quot;,  TIMEVALUE( Date_and_Time__c ) , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evening Time</label>
    <type>Time</type>
</CustomField>