force-app/main/default/objects/HealthRecord__c/fields/Medicine__c.field-meta.xml
<CustomField>
    <fullName>Medicine__c</fullName>
    <defaultValue>&quot;Amlong&quot;</defaultValue>
    <label>Medicine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>