force-app/main/default/objects/HealthRecord__c/fields/Morning_BP_Reading_Down__c.field-meta.xml
<CustomField>
    <fullName>Morning_BP_Reading_Down__c</fullName>
    <formula>IF(Phase__c == &quot;Morning&quot;,  BP_Down__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Morning BP Down</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>