force-app/main/default/objects/HealthRecord__c/fields/Morning_Medicine__c.field-meta.xml
<CustomField>
    <fullName>Morning_Medicine__c</fullName>
    <formula>IF(Phase__c == &quot;Morning&quot;,  Medicine__c , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Morning Medicine</label>
    <type>Text</type>
</CustomField>