force-app/main/default/objects/HealthRecord__c/fields/Morning_Time__c.field-meta.xml
<CustomField>
    <fullName>Morning_Time__c</fullName>
    <formula>IF(Phase__c == &quot;Morning&quot;, TIMEVALUE( Date_and_Time__c ) , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Morning Time</label>
    <type>Time</type>
</CustomField>