force-app/main/default/objects/HealthRecord__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <formula>IF(
    TIMEVALUE(Date_and_Time__c) &lt;  TIMEVALUE(&quot;10:30:00.000&quot;) ,
    &quot;Morning&quot;,
    &quot;Evening&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase</label>
    <type>Text</type>
</CustomField>