force-app/main/default/objects/HealthRecord__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alex Brown</fullName>
                <default>true</default>
                <label>Alex Brown</label>
            </value>
            <value>
                <fullName>Robin Pinaka</fullName>
            </value>
            <value>
                <fullName>Aakash Singh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>